Add weasel words from blog post
https://medium.com/@inowland/using-6-page-and-2-page-documents-to-make-organizational-decisions-3216badde909

--- a/git-cop/.config/git-cop/configuration.yml
+++ b/git-cop/.config/git-cop/configuration.yml
@@ -72,6 +72,40 @@
     - "/\\bquite\\b/"
     - "/as\\sfar\\sas\\s.+\\sconcerned/"
     - "/of\\sthe\\s(fact|opinion)\\sthat/"
+    - "a number of"
+    - "clearly"
+    - "completely"
+    - "could"
+    - "exceedingly"
+    - "excellent"
+    - "extremely"
+    - "extraordinary"
+    - "fairly"
+    - "few"
+    - "interestingly"
+    - "it is said"
+    - "large"
+    - "less than"
+    - "many"
+    - "more than"
+    - "most"
+    - "normally"
+    - "often"
+    - "probably"
+    - "quite"
+    - "recent"
+    - "relatively"
+    - "remarkably"
+    - "several"
+    - "significant"
+    - "substantial"
+    - "surprising"
+    - "tiny"
+    - "up to"
+    - "usually"
+    - "various"
+    - "vast"
+    - "very"
 :commit_body_presence:
   :enabled: false
   :severity: :warn
