--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,45 +1,28 @@
 [user]
-	name = Jonathan Emord
-	email = jonathan.emord@gmail.com
-[push]
-	default = simple
-[branch]
-	autosetuprebase = always
+	email = jon@emord.dev
+	name = Jon Emord
 [color]
 	ui = true
-[alias]
-	ci = commit
-	co = checkout
-	st = status
-	unstage = reset HEAD --
-	lg = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --date=relative
-	ctags = !.git/hooks/ctags
-    praise = blame
-
-    # remove all branches merged in to HEAD
-    trim = "!git branch --merged | grep -v '\\*' | xargs -n 1 git branch -d"
-
-    edit-modified = "!f() { git ls-files --modified | cut -f2 | sort -u ; }; vim `f`"
-    edit-unmerged = "!f() { git ls-files --unmerged | cut -f2 | sort -u ; }; vim `f`"
-    edit-untracked = "!f() { git ls-files --others --exclude-standard | cut -f2 | sort -u ; }; vim `f`"
-    add-unmerged = "!f() { git ls-files --unmerged | cut -f2 | sort -u ; }; git add `f`"
-
-    sub = submodule update --init --recursive
-    csv-dff = diff --color-words="[^[:space:],]+"
+[core]
+	editor = vim
 [help]
 	autocorrect = 1
-[init]
-	templatedir = ~/.git_template
-[core]
-    editor = vim
-[diff]
-    compactionHeuristic = true
-    indentHeuristic = true
-[merge]
-    conflictstyle = diff3
-[status]
-    showUntrackedFiles = all
-[transfer]
-    fsckobjects = false
-[fetch]
-    fsckObjects = false
+[alias]
+	co = checkout
+	st = status
+	lg = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --date=relative
+
+	# remove all branches merged in to HEAD
+	trim = "!git branch --merged | grep -v '\\*' | xargs -n 1 git branch -d"
+
+	edit-modified = "!f() { git ls-files --modified | cut -f2 | sort -u ; }; vim `f`"
+	edit-unmerged = "!f() { git ls-files --unmerged | cut -f2 | sort -u ; }; vim `f`"
+	edit-untracked = "!f() { git ls-files --others --exclude-standard | cut -f2 | sort -u ; }; vim `f`"
+	add-unmerged = "!f() { git ls-files --unmerged | cut -f2 | sort -u ; }; git add `f`"
+
+	csv-diff = diff --color-words="[^[:space:],]+"
+[filter "lfs"]
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+	required = true
