--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -11,17 +11,17 @@ set -g status-right '#[fg=green,bg=black,bright]#(tmux-mem-cpu-load 1) #[fg=whit
 # default statusbar colors
 set -g status-fg white
 set -g status-bg default
-set -g status-attr bright
+# set -g status-attr bright
 
 # default window title colors
-set-window-option -g window-status-fg white
-set-window-option -g window-status-bg default
-set-window-option -g window-status-attr dim
+# set-window-option -g window-status-fg white
+# set-window-option -g window-status-bg default
+# set-window-option -g window-status-attr dim
 
 # active window title colors
-set-window-option -g window-status-current-fg white
-set-window-option -g window-status-current-bg default
-set-window-option -g window-status-current-attr bright
+# set-window-option -g window-status-current-fg white
+# set-window-option -g window-status-current-bg default
+# set-window-option -g window-status-current-attr bright
 
 # allow window scrolling with mouse
 set-option -g mouse on
@@ -31,8 +31,8 @@ set-option -g default-shell /bin/zsh
 
 set -g base-index 1
 
-set-option -g prefix C-a
-bind-key C-a send-prefix
+#set-option -g prefix C-a
+#bind-key C-a send-prefix
 
 set -g default-terminal "screen-256color"
 
