--- a/vim/.vim/coc-settings.json
+++ b/vim/.vim/coc-settings.json
@@ -1,3 +1,8 @@
 {
-  "python.jediEnabled": false
+  "python.formatting.provider": "black",
+  "python.formatting.blackPath": "black",
+  "python.linting.pylintEnabled": true,
+  "markdownlint.config": {
+    "line_length": false
+  }
 }
